fixing modal on iphone

--- a/PredictionUI/Views/Client/Layout/css/style.css
+++ b/PredictionUI/Views/Client/Layout/css/style.css
@@ -636,8 +636,12 @@ option , select{
     }
 
     .modal-dialog {
-        /*z-index: 999999999999999999999999;*/
+        z-index: 999999!important;
     }
+    .modal-content {
+        z-index: 999999!important;
+    }
+
 
 }
 
